--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -28,7 +28,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:hint="Shreyansh srivastva"
+        android:hint="Name"
         android:textColorHint="#676767"
         android:textColor="@android:color/black"
         android:gravity="center_horizontal"
@@ -43,7 +43,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:hint="Abc@gmail.com"
+        android:hint="Email Id"
         android:inputType="textEmailAddress"
         android:textColorHint="#676767"
         android:textCursorDrawable="@null"
@@ -59,7 +59,7 @@
         android:layout_marginLeft="20dp"
         android:textCursorDrawable="@null"
         android:layout_marginRight="20dp"
-        android:hint="85638669863"
+        android:hint="Phone No."
         android:inputType="number"
         android:textColorHint="#676767"
         android:gravity="center"
