--- a/app/src/main/res/layout/fragment_upload_menu.xml
+++ b/app/src/main/res/layout/fragment_upload_menu.xml
@@ -75,6 +75,7 @@
         android:hint="Please Enter Price"
         android:inputType="number"
         android:padding="10dp"
+        android:background="@android:color/transparent"
         android:layout_weight="1"
         android:backgroundTint="@android:color/transparent"
         android:textAppearance="?android:textAppearanceSmall"
