--- a/app/src/main/res/layout/home_row.xml
+++ b/app/src/main/res/layout/home_row.xml
@@ -25,7 +25,7 @@
     <ImageView
         android:id="@+id/iv_proimagee"
         android:layout_width="match_parent"
-        android:layout_height="240dp"
+        android:layout_height="220dp"
         android:src="@drawable/stat"
         android:scaleType="fitXY"/>
 
@@ -95,14 +95,26 @@
         android:background="#80000000">
 
 
-        <ImageView
+        <!--<ImageView
             android:id="@+id/iv_ico"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:src="@drawable/icon"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp"/>-->
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/iv_ico"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/icon"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="10dp"
+            app:civ_border_color="#FF000000"/>
 
         <TextView
             android:id="@+id/tv_proname"
@@ -110,7 +122,7 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/iv_ico"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="7dp"
             android:textColor="@android:color/white"
             android:textStyle="bold"
             android:text="Chicken Biryani"/>
@@ -122,8 +134,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_proname"
         android:layout_toRightOf="@+id/iv_ico"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="5dp"
+        android:layout_marginLeft="7dp"
         android:textColor="@android:color/white"
         android:text="Ankit"/>
 
@@ -134,8 +145,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_username"
             android:layout_toRightOf="@+id/iv_ico"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="7dp"
             android:textColor="@android:color/white"
             android:text="9:00 - 9:30PM"/>
 
@@ -143,11 +153,12 @@
 
         <ImageView
             android:id="@+id/iv_fav"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_alignParentRight="true"
             android:src="@drawable/fav"
-            android:layout_marginRight="10dp" />
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="20dp" />
 
         <TextView
             android:id="@+id/tv_count"
@@ -157,6 +168,7 @@
             android:layout_alignParentRight="true"
             android:textColor="@android:color/white"
             android:layout_below="@+id/iv_fav"
+            android:visibility="gone"
             android:layout_marginTop="10dp"/>
 
         <TextView
@@ -186,7 +198,7 @@
     <ImageView
         android:id="@+id/iv_trans"
         android:layout_width="match_parent"
-        android:layout_height="240dp"
+        android:layout_height="220dp"
         android:scaleType="fitXY"/>
 
 
