--- a/app/src/main/res/layout/orderhistory_row.xml
+++ b/app/src/main/res/layout/orderhistory_row.xml
@@ -72,6 +72,7 @@
         android:layout_height="wrap_content"
         android:text="Shreyansh srivastava"
         android:layout_marginTop="5dp"
+        android:visibility="gone"
         android:layout_gravity="center_horizontal"
         android:textStyle="bold"
         android:textColor="#9a9a9a"/>
