--- a/app/src/main/res/layout/orderhisbusi_row.xml
+++ b/app/src/main/res/layout/orderhisbusi_row.xml
@@ -2,14 +2,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@android:color/white">
+    android:background="@android:color/white"
+    android:orientation="vertical">
+
 
     <View
         android:layout_width="1dp"
         android:layout_height="250dp"
         android:layout_alignParentRight="true"
-        android:background="#1A000000"/>
+        android:background="#1A000000" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,7 +26,7 @@
                 android:layout_width="200dp"
                 android:layout_height="150dp"
                 android:layout_marginTop="10dp"
-                android:src="@drawable/hiss"/>
+                android:src="@drawable/hiss" />
 
             <ImageView
                 android:id="@+id/iv_logohis"
@@ -32,28 +34,27 @@
                 android:layout_height="80dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="30dp"
-                android:src="@drawable/icon"/>
+                android:src="@drawable/icon" />
 
             <ImageView
                 android:id="@+id/delimg"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
                 android:layout_gravity="right"
-                android:src="@drawable/deliver"/>
+                android:src="@drawable/deliver" />
 
             <TextView
                 android:id="@+id/tv_deliverhis"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:text="Delivered"
-                android:gravity="center"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="0dp"
                 android:layout_gravity="right"
+                android:layout_marginRight="0dp"
+                android:layout_marginTop="15dp"
+                android:gravity="center"
                 android:padding="2dp"
-                android:textSize="11sp"
+                android:text="Delivered"
                 android:textColor="@android:color/white"
-                />
+                android:textSize="11sp" />
 
         </FrameLayout>
 
@@ -61,87 +62,86 @@
             android:id="@+id/tv_pronamehis"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Matar Paneer"
             android:layout_gravity="center_horizontal"
-            android:textStyle="bold"
-            android:textColor="#9a9a9a"/>
+            android:text="Matar Paneer"
+            android:textColor="#9a9a9a"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_usernamehis"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Shreyansh srivastava"
-            android:layout_marginTop="5dp"
             android:layout_gravity="center_horizontal"
-            android:textStyle="bold"
-            android:textColor="#9a9a9a"/>
+            android:layout_marginTop="5dp"
+            android:text="Shreyansh srivastava"
+            android:textColor="#9a9a9a"
+            android:textStyle="bold" />
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_marginTop="5dp"
             android:gravity="center_horizontal"
-            android:layout_marginTop="5dp">
+            android:orientation="horizontal">
 
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Quantity:"
                 android:layout_gravity="center_horizontal"
-                android:textColor="#9a9a9a"/>
+                android:text="Quantity:"
+                android:textColor="#9a9a9a" />
 
 
             <TextView
                 android:id="@+id/tv_quantityhis"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1"
                 android:layout_gravity="center_horizontal"
+                android:text="1"
 
-                android:textColor="#9a9a9a"/>
-
+                android:textColor="#9a9a9a" />
 
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Price:"
-                android:layout_marginLeft="10dp"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="10dp"
+                android:text="Price:"
 
-                android:textColor="#9a9a9a"/>
+                android:textColor="#9a9a9a" />
 
 
             <TextView
                 android:id="@+id/tv_pricehis"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1"
                 android:layout_gravity="center_horizontal"
-                android:textColor="#9a9a9a"/>
+                android:text="1"
+                android:textColor="#9a9a9a" />
 
 
         </LinearLayout>
-
 
 
         <TextView
             android:id="@+id/tv_datehis"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="19-01-2018"
+            android:layout_gravity="center_horizontal"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
-            android:layout_gravity="center_horizontal"
-            android:textStyle="bold"
-            android:textColor="#9a9a9a"/>
+            android:text="19-01-2018"
+            android:textColor="#9a9a9a"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/del"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"/>
+            android:visibility="gone" />
     </LinearLayout>
+
 </RelativeLayout>
